--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ subprojects {
 
     version = "${minecraft_version}-${mod_version}"
 
-    java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+    java.toolchain.languageVersion = JavaLanguageVersion.of(21)
     java.withSourcesJar()
 
     jar {
@@ -74,7 +74,7 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
         it.options.encoding = 'UTF-8'
-        it.options.release.set(17)
+        it.options.release.set(21)
     }
 
     processResources {
@@ -89,7 +89,7 @@ subprojects {
             mod_discord_url     : mod_discord_url,
             mod_license         : mod_license
         ]
-        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', "*.mixins.json"]) {
+        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', 'META-INF/neoforge.mods.toml', "*.mixins.json"]) {
             expand expandProps
         }
         inputs.properties(expandProps)
